--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-elements": "^0.19.1",
     "react-navigation": "^2.3.1",
     "styled-components": "^3.3.2"
   }
