--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,8 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-elements": "^0.19.1",
+    "react-native-fbsdk": "^0.7.0",
+    "react-native-google-signin": "^0.12.0",
     "react-navigation": "^2.3.1",
     "styled-components": "^3.3.2"
   }
