--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "expo": "^27.0.1",
+    "formik": "^1.0.2",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
     "react-native": "~0.55.2",
@@ -41,6 +42,7 @@
     "react-native-fbsdk": "^0.7.0",
     "react-native-google-signin": "^0.12.0",
     "react-navigation": "^2.3.1",
-    "styled-components": "^3.3.2"
+    "styled-components": "^3.3.2",
+    "yup": "^0.26.0"
   }
 }
