--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/runtime": "7.0.0-beta.55",
     "axios": "^0.18.0",
     "expo": "^27.0.1",
     "formik": "^1.0.2",
