--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.188.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "concurrently": "^3.5.0",
     "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.3",
     "jest": "^22.1.4",
+    "jsonwebtoken": "^8.3.0",
     "migrate-mongoose": "^3.2.2",
     "mongoose": "^4.11.1",
     "nodemon": "^1.11.0",
